src/test/resources/de/monticore/umlcd4a/cocos/ebnf/invalid/C4A16.cd
package de.monticore.umlcd4a.cocos.ebnf.invalid;

classdiagram C4A16 {
  class A;
  class B;

  association Assoc1 A->B;
  association Assoc2 A<->B;
  association Assoc3 A<-B;
}
